<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Boozr</string>
    <string name="action_settings">Settings</string>
    <string name="boozr">Boozr</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="name">Name:</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="reset">Reset</string>
    <string name="hello_world">Hello world!</string>
    <string name="save">Save</string>
    <string name="buttonTest">Test</string>
    <string name="field">Field</string>
    <string name="submit">Submit</string>
    <string name="titleTestActivity">Boozr: Test</string>

    <string-array name="searchByFilters">
        <item>Name</item>
        <item>Brewery</item>
        <item>Type</item>
        <item>Alcohol</item>
        <item>Rating</item>
        <item>Price</item>
    </string-array>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="username">Username</string>
    <string name="reviews">Reviews</string>
    <string name="followerReviews">Reviews From Followed Users</string>
    <string name="location">Location</string>
    <string name="email">Email</string>
    <string name="toggleButton">ToggleButton</string>
    <string name="userId">User ID</string>
    <string name="unknown">unknown</string>
    <string name="drinkName">Drink Name</string>
    <string name="stars">Stars:</string>
    <string name="price">Price:</string>
    <string name="storeName">Store Name:</string>
    <string name="storeAddress">Store Address:</string>
    <string name="review">Review</string>
    <string name="postReview">Post Review</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="beer">Beer</string>
    <string name="user">User</string>
    <string name="advancedSearch">Advanced Search</string>
    <string name="password">Password</string>
    <string name="createAccount">Create Account</string>
    <string name="topDrinks">Top Drinks</string>
    <string name="newDrink">New Drink</string>
    <string name="userProfile">User Profile</string>
    <string name="logout">Logout</string>
    <string name="editAccount">Edit Account</string>
    
</resources>
