<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/drinkName"
        android:id="@+id/drinknameText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/drinknameText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/stars"
            android:id="@+id/StarsLabel"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/starsText"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/price"
            android:id="@+id/PriceLabel"
            android:layout_row="1"
            android:layout_column="0" />

        <EditText
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/priceText"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/storeName"
            android:id="@+id/NameLabel"
            android:layout_row="2"
            android:layout_column="0" />

        <EditText
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:id="@+id/nameText"
            android:layout_row="2"
            android:layout_column="1"
        	android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/storeAddress"
            android:id="@+id/AddressLabel"
            android:layout_row="3"
            android:layout_column="0" />

        <EditText
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:id="@+id/addressText"
            android:layout_row="3"
            android:layout_column="1"
        	android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/review"
            android:id="@+id/ReviewLabel"
            android:layout_row="4"
            android:layout_column="0" />

        <EditText
            android:layout_width="256dp"
            android:layout_height="186dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/reviewText"
            android:layout_row="4"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postReview"
            android:id="@+id/PostReview"
            android:layout_row="6"
            android:onClick="postReview"
            android:layout_column="1" />
    </GridLayout>

</RelativeLayout>